add to the index page

--- a/hw/Homework1/Military.html
+++ b/hw/Homework1/Military.html
@@ -43,7 +43,7 @@
   <hr>
 <br><br/>
 
-<img src="img/m1.jpg"alt=" Military dorne" id="image1/> 
+<img src="img/m1.jpg"alt=" Military dorne" id="image1"/> 
 <div id="t2">
     <p> President Barack Obama has stated that the US is using unmanned aircraft (UA) to 
     take out suspected militants in tribal areas of Pakistan.
