--- a/hw/Homework1/Commercial.html
+++ b/hw/Homework1/Commercial.html
@@ -6,12 +6,12 @@
     <head>
         <title>Mac cooper hw1 </title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link herf="http://internetofthingsagenda.techtarget.com/definition/drone">
-<link herf="https://www.intel.com/content/www/us/en/drones/drone-applications/commercial-drones.html">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+<!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
+<!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">-->
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+<!--<link herf="http://internetofthingsagenda.techtarget.com/definition/drone">-->
+<!--<link herf="https://www.intel.com/content/www/us/en/drones/drone-applications/commercial-drones.html">-->
  <link href="css/styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <!--this is the body of the website everything in the websitegoes here-->
@@ -44,7 +44,7 @@
   <hr>
 <br><br/>
 
-<img src="img/c1.png"alt=" Military dorne" class=image/> 
+<img src="img/c1.png" alt=" Military dorne" class=image/> 
 <div id="t1">
     
     <p> The Intel® Falcon™ 8+ drone is an advanced commercial multi-rotor 
